config-root/namespaces/jx-staging/rust-demo3/rust-demo3-rust-demo3-deploy.yaml
# Source: rust-demo3/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-demo3-rust-demo3
  labels:
    draft: draft-app
    chart: "rust-demo3-0.0.8"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: rust-demo3-rust-demo3
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: rust-demo3-rust-demo3
    spec:
      serviceAccountName: rust-demo3-rust-demo3
      containers:
        - name: rust-demo3
          image: "gcr.io/jenkins-x-labs-bdd/rust-demo3:0.0.8"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
